<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Studentenkookboek</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recept_detail">ReceptDetailActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="riPictureRecipe">Picture Recipe</string>
    <string name="riDurationRecipe">Duur:</string>
    <string name="riNameRecipe">Name Recipe</string>
    <string name="riCostRecipe">Kost:</string>
    <string name="riNumRecipe"># personen:</string>
    <string name="riDiffRecipe">Moeilijkheid:</string>
    <string name="riUploadedRecipe">Geüpload door:</string>
    <string name="swipeToAddBasket">Swipe rechts: toevoegen aan mandje</string>
    <string name="AddBasket">addBasket</string>
    <string name="search_hint">Zoekterm</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_title">Zoeken</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="action_share">Delen</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="favorieten">Favorieten</string>
    <string name="action_delete">Ledig favorieten</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="action_rate">Rate</string>
    <string name="txtUwScore">Uw punten:</string>
    <string name="txtUwMening">Uw mening:</string>
    <string name="txtUwMeningHint">Vul mening in...</string>
    <string name="create_name_recipe">Naam:</string>
    <string name="crRecipe_name">Recept naam</string>
    <string name="crRecept_duur">Bereidingstijd (in min)</string>
    <string name="aantal_personen">Aantal personen</string>
    <string name="next">Volgende</string>
    <string name="previous">Vorige</string>
    <string name="Ingredients">Ingrediënten:</string>
    <string name="addIngredients">Ingrediënten toevoegen</string>
    <string name="bereiding">Bereiding:</string>
    <string name="Categories">Categorieën</string>
    <string name="action_favorite">favorite</string>
    <string name="Ingredient">Ingredient</string>
    <string name="Hoev">Hoev.</string>
    <string name="receptimage">receptimage</string>
    <string name="receptname">Large Text</string>
    <string name="refresh">refresh</string>
    <string name="FirstName">Voornaam:</string>
    <string name="FamilyName">Familienaam:</string>
    <string name="Email">Email:</string>
    <string name="banner_ad_unit_id">ca-app-pub-6729147920273787/3956910952</string>
</resources>
