<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="0dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/recept_image_create"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_upload"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:padding="50dp"
         />
    <TextView
        android:id="@+id/nameRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_name_recipe"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/recept_image_create"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/ciNameRecipe"
        android:hint="@string/crRecipe_name"
        android:inputType="text"
        android:layout_alignBottom="@+id/nameRecipe"
        android:layout_alignLeft="@+id/ciDurationName"
        android:layout_alignStart="@+id/ciDurationName"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/riDurationRecipe"
        android:id="@+id/riDurationRecipe"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/ciNameRecipe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:hint="@string/crRecept_duur"
        android:id="@+id/ciDurationName"
        android:inputType="numberDecimal"
        android:layout_alignBottom="@+id/riDurationRecipe"
        android:layout_alignLeft="@+id/ciCostRecipeSpinner"
        android:layout_alignStart="@+id/ciCostRecipeSpinner"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/riCostRecipe"
        android:id="@+id/riCostRecipe"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/ciDurationName"
        android:layout_alignLeft="@+id/riDurationRecipe"
        android:layout_alignStart="@+id/riDurationRecipe" />
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ciCostRecipeSpinner"
        android:layout_alignTop="@+id/riCostRecipe"
        android:layout_alignLeft="@+id/numPersons"
        android:layout_alignStart="@+id/numPersons"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/riNumRecipe"
        android:id="@+id/riNumRecipe"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/ciCostRecipeSpinner"
        android:layout_alignLeft="@+id/riCostRecipe"
        android:layout_alignStart="@+id/riCostRecipe" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/numPersons"
        android:hint="@string/aantal_personen"
        android:layout_alignBottom="@+id/riNumRecipe"
        android:layout_alignLeft="@+id/ciDiffSpinner"
        android:layout_alignStart="@+id/ciDiffSpinner"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/riDiffRecipe"
        android:id="@+id/riDifficultyRecipe"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/riNumRecipe"
        android:layout_alignLeft="@+id/riCostRecipe"
        android:layout_alignStart="@+id/riCostRecipe" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ciDiffSpinner"
        android:layout_toEndOf="@id/riDifficultyRecipe"
        android:layout_toRightOf="@id/riDifficultyRecipe"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignTop="@+id/riDifficultyRecipe"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="0dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload an image"
        android:id="@+id/txvUploadImage"
        android:layout_alignBottom="@+id/recept_image_create"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp" />


</RelativeLayout>