<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="be.howest.nmct.receptenapp.fragments.ReceptCreateIngredientFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Ingredients"
            android:id="@+id/txbIngredients" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvIngredients"
            android:layout_marginBottom="25dp"
            android:choiceMode="multipleChoice"
            android:listSelector="@android:color/holo_orange_dark">

            </ListView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:padding="0dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>


</RelativeLayout>
