<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.ReceptCreateBereidingFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bereiding"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    <EditText
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:lines="8"
        android:minLines="6"
        android:maxLines="10"
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:id="@+id/recept_bereiding"
        android:background="@drawable/textlinesborder"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:padding="0dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>
</RelativeLayout>
